# axelar-cgp-stellar

./: .release-plz.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  optimize.sh
contracts/axelar-gas-service/: CHANGELOG.md  Cargo.toml
contracts/axelar-gas-service/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  testutils.rs
contracts/axelar-gas-service/tests/: test.rs
contracts/axelar-gas-service/tests/testdata/: add_gas.golden  collect_fees.golden  pay_gas.golden  refund.golden
contracts/axelar-gateway/: CHANGELOG.md  Cargo.toml
contracts/axelar-gateway/src/: auth.rs  contract.rs  error.rs  event.rs  executable.rs  interface.rs  lib.rs  testutils.rs
contracts/axelar-gateway/tests/: auth.rs  gateway.rs
contracts/axelar-gateway/tests/testdata/: approve_message.golden  approve_messages_after_rotation.golden  call_contract.golden  execute_approved_message.golden  rotate_signers.golden  rotate_signers_bypass_rotation_delay.golden  rotate_signers_to_large_signers_set.golden
contracts/axelar-gateway/tests/utils/: mod.rs
contracts/axelar-operators/: CHANGELOG.md  Cargo.toml
contracts/axelar-operators/src/: contract.rs  event.rs  interface.rs  lib.rs
contracts/axelar-operators/tests/: test.rs
contracts/axelar-operators/tests/testdata/: add_operator_succeeds.golden  execute_succeeds.golden  remove_operator_succeeds.golden
contracts/example/: Cargo.toml
contracts/example/src/: contract.rs  event.rs  interface.rs  lib.rs
contracts/example/tests/: test.rs
contracts/example/tests/testdata/: gmp_example.golden  its_example.golden
contracts/interchain-token/: CHANGELOG.md  Cargo.toml
contracts/interchain-token-service/: CHANGELOG.md  Cargo.toml
contracts/interchain-token-service/src/: abi.rs  contract.rs  error.rs  event.rs  executable.rs  flow_limit.rs  interface.rs  lib.rs  storage_types.rs  testutils.rs  token_metadata.rs  types.rs
contracts/interchain-token-service/tests/: deploy_interchain_token.rs  deploy_remote_canonical_token.rs  deploy_remote_interchain_token.rs  executable.rs  execute.rs  flow_limit.rs  interchain_transfer.rs  message_routing.rs  pause.rs  register_canonical_token.rs  trusted_chain.rs
contracts/interchain-token-service/tests/testdata/: canonical_token_id_derivation.golden  deploy_interchain_token_check_token_id_and_token_manager_type.golden  deploy_interchain_token_message_execute_succeeds.golden  deploy_interchain_token_succeeds.golden  deploy_interchain_token_zero_initial_supply_and_valid_minter.golden  deploy_interchain_token_zero_initial_supply_no_minter.golden  deploy_remote_canonical_token_succeeds.golden  deploy_remote_canonical_token_succeeds_native_token.golden  deploy_remote_canonical_token_succeeds_without_name_truncation.golden  deploy_remote_interchain_token_succeeds.golden  interchain_transfer_execute_succeeds.golden  interchain_transfer_message_execute_succeeds.golden  interchain_transfer_send_succeeds.golden  pause_succeeds.golden  register_canonical_token_succeeds.golden  remove_trusted_chain.golden  set_flow_limit_succeeds.golden  set_flow_limit_to_none_succeeds.golden  set_trusted_address.golden  unpause_succeeds.golden
contracts/interchain-token-service/tests/utils/: mod.rs
contracts/interchain-token/src/: contract.rs  event.rs  interface.rs  lib.rs
contracts/interchain-token/tests/: test.rs
contracts/interchain-token/tests/testdata/: add_minter_succeeds.golden  remove_minter.golden
contracts/stellar-axelar-example/: Cargo.toml
contracts/stellar-axelar-example/src/: contract.rs  interface.rs  lib.rs
contracts/stellar-axelar-example/src/tests/: test.rs
contracts/stellar-axelar-gas-service/: CHANGELOG.md  Cargo.toml
contracts/stellar-axelar-gas-service/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  testutils.rs
contracts/stellar-axelar-gas-service/src/tests/: test.rs
contracts/stellar-axelar-gateway/: CHANGELOG.md  Cargo.toml
contracts/stellar-axelar-gateway/src/: auth.rs  contract.rs  error.rs  event.rs  executable.rs  interface.rs  lib.rs  migrate.rs  storage.rs  testutils.rs  types.rs
contracts/stellar-axelar-gateway/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden  ensure_legacy_data_key_storage_schema_is_unchanged.golden
contracts/stellar-axelar-gateway/src/tests/: auth.rs  gateway.rs  migrate.rs  mod.rs  testutils.rs
contracts/stellar-axelar-operators/: CHANGELOG.md  Cargo.toml
contracts/stellar-axelar-operators/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  migrate.rs  storage.rs
contracts/stellar-axelar-operators/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden  ensure_legacy_data_key_storage_schema_is_unchanged.golden  ensure_migration_data_key_storage_schema_is_unchanged.golden  ensure_migration_data_storage_schema_is_unchanged.golden
contracts/stellar-axelar-operators/src/tests/: migrate.rs  mod.rs  test.rs  testutils.rs
contracts/stellar-interchain-token/: CHANGELOG.md  Cargo.toml
contracts/stellar-interchain-token-service/: CHANGELOG.md  Cargo.toml  INTEGRATION.md
contracts/stellar-interchain-token-service/src/: abi.rs  contract.rs  deployer.rs  error.rs  event.rs  executable.rs  flow_limit.rs  interface.rs  lib.rs  storage.rs  storage_types.rs  testutils.rs  token_handler.rs  token_id.rs  token_manager.rs  token_metadata.rs  types.rs
contracts/stellar-interchain-token-service/src/testdata/: ensure_data_key_storage_schema_is_unchanged.golden  interchain_token.wasm  stellar_interchain_token.optimized.wasm  token_manager.wasm  (+1 more)
contracts/stellar-interchain-token/src/: contract.rs  error.rs  event.rs  interface.rs  lib.rs  storage.rs
contracts/stellar-token-manager/: CHANGELOG.md  Cargo.toml
contracts/stellar-token-manager/src/: contract.rs  error.rs  interface.rs  lib.rs
contracts/stellar-upgrader/: CHANGELOG.md  Cargo.toml
contracts/stellar-upgrader/src/: contract.rs  error.rs  interface.rs  lib.rs
contracts/upgrader/: CHANGELOG.md  Cargo.toml
contracts/upgrader/src/: contract.rs  interface.rs
contracts/upgrader/tests/: atomic_upgrades.rs
(+86 files in other folders)
