[workspace]
resolver = "2"
members = ["contracts/*", "packages/*"]

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = { version = "22.0.2" }
soroban-token-sdk = { version = "22.0.2" }
proc-macro2 = { version = "1.0" }
cfg-if = { version = "1.0" }
stellar-axelar-std = { version = "^0.1.0", path = "packages/axelar-std", features = ["derive"] }
stellar-axelar-std-derive = { version = "^0.1.0", path = "packages/axelar-std-derive" }
stellar-axelar-gas-service = { version = "^0.1.0", path = "contracts/axelar-gas-service" }
stellar-axelar-gateway = { version = "^0.1.0", path = "contracts/axelar-gateway" }
stellar-axelar-operators = { version = "^0.1.0", path = "contracts/axelar-operators" }
stellar-interchain-token = { version = "^0.1.0", path = "contracts/interchain-token" }
stellar-interchain-token-service = { version = "^0.1.0", path = "contracts/interchain-token-service" }
alloy-primitives = { version = "0.8.14", default-features = false, features = [
    "std",
] }
alloy-sol-types = { version = "0.8.14", default-features = false, features = [
    "std",
] }
goldie = "0.5.0"
hex = { version = "0.4" }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"

[workspace.lints.rust]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
