[workspace]
resolver = "2"
members = ["contracts/*", "packages/*"]

[workspace.package]
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy-primitives = { version = "0.8.19", default-features = false, features = [
    "std",
] }
alloy-sol-types = { version = "0.8.19", default-features = false, features = [
    "std",
] }
cfg-if = { version = "1.0", default-features = false }
goldie = { version = "0.5.0", default-features = false }
hex = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
soroban-sdk = { version = "22.0.6" }
soroban-token-sdk = { version = "22.0.6" }
stellar-axelar-example = { version = "^1.0.0", path = "contracts/stellar-axelar-example" }
stellar-axelar-gas-service = { version = "^1.0.0", path = "contracts/stellar-axelar-gas-service" }
stellar-axelar-gateway = { version = "^1.0.0", path = "contracts/stellar-axelar-gateway" }
stellar-axelar-operators = { version = "^1.0.0", path = "contracts/stellar-axelar-operators" }
stellar-axelar-std = { version = "^1.0.0", path = "packages/stellar-axelar-std", features = ["derive"] }
stellar-axelar-std-derive = { version = "^1.0.0", path = "packages/stellar-axelar-std-derive" }
stellar-interchain-token = { version = "^1.0.0", path = "contracts/stellar-interchain-token" }
stellar-interchain-token-service = { version = "^1.0.0", path = "contracts/stellar-interchain-token-service" }
stellar-token-manager = { version = "^1.0.0", path = "contracts/stellar-token-manager" }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"

[workspace.lints.rust]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
