[package]
name = "stellar-axelar-gas-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gas Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-soroban-std = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-soroban-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
library = [] # Only export the contract interface
testutils = []
