[package]
name = "stellar-axelar-gas-service"
version = "0.1.1"
edition = { workspace = true }
description = "Contract related to Axelar Gas Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
library = [] # Only export the contract interface
testutils = []
