[package]
name = "stellar-axelar-gateway"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gateway."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-axelar-soroban-std = { workspace = true }
cfg-if = { workspace = true }
ed25519-dalek = { version = "^2.1", default-features = false, optional = true }
rand = { version = "0.8.5", optional = true }
rand_chacha = "0.3"
soroban-sdk = { workspace = true }

[dev-dependencies]
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-soroban-std = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "^2.1" }
goldie = { workspace = true }
hex = "0.4"
hex-literal = "0.4"
rand = { version = "0.8.5" }
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
library = [] # Only export the contract interface
testutils = ["soroban-sdk/testutils", "stellar-axelar-soroban-std/testutils", "ed25519-dalek", "rand"]

[lints]
workspace = true
