[package]
name = "stellar-axelar-gateway"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Gateway."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
ed25519-dalek = { version = "^2.1", default-features = false, optional = true }
rand = { version = "0.8.5", optional = true }
rand_chacha = "0.3"
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
ed25519-dalek = { version = "^2.1" }
goldie = { workspace = true }
hex = "0.4"
hex-literal = "0.4"
paste = { workspace = true }
rand = { version = "0.8.5" }
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Only export the contract interface
testutils = ["soroban-sdk/testutils", "stellar-axelar-std/testutils", "ed25519-dalek", "rand"]

[lints]
workspace = true
