[package]
name = "stellar-axelar-operators"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Axelar Operators."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-axelar-soroban-std = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
stellar-axelar-soroban-std = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
