[package]
name = "example"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []

[dependencies]
stellar-interchain-token-service = { workspace = true, features = ["library"] }
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["library"] }
stellar-axelar-gateway = { workspace = true, features = ["library"] }
stellar-axelar-std = { workspace = true }
stellar-axelar-std-derive = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
stellar-interchain-token-service = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["testutils"] }
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }
stellar-axelar-std-derive = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
