[package]
name = "stellar-interchain-token-service"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Interchain Token Service."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
cfg-if = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["library"] }
stellar-axelar-gateway = { workspace = true, features = ["library"] }
stellar-axelar-soroban-std = { workspace = true }
stellar-interchain-token = { workspace = true, features = ["library"] }

[dev-dependencies]
goldie = { workspace = true }
hex = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
stellar-axelar-gas-service = { workspace = true, features = ["testutils"] }
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-soroban-std = { workspace = true, features = ["testutils"] }
stellar-interchain-token = { workspace = true, features = ["testutils"] }
stellar-interchain-token-service = { workspace = true, features = ["testutils"] }


[features]
library = []
testutils = ["stellar-axelar-soroban-std/testutils"]

[lints]
workspace = true
