[package]
name = "stellar-interchain-token"
version = "0.1.0"
edition = { workspace = true }
description = "Contract related to Interchain Token."
license = "MIT"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-axelar-soroban-std = { workspace = true }
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
stellar-axelar-soroban-std = { workspace = true, features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
library = [] # Only export the contract interface
testutils = ["soroban-sdk/testutils", "stellar-axelar-soroban-std/testutils"]

[lints]
workspace = true
