[package]
name = "stellar-axelar-example"
version = "1.0.0"
edition = { workspace = true }
description = "AxelarExample contract, responsible for demonstrating interchain message and token transfers with Gateway, GasService, and InterchainTokenService."
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["stellar-axelar-std/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["library"] }
stellar-axelar-gateway = { workspace = true, features = ["library"] }
stellar-axelar-std = { workspace = true }
stellar-interchain-token-service = { workspace = true, features = ["library"] }

[dev-dependencies]
goldie = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["testutils"] }
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }
stellar-interchain-token-service = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
