[package]
name = "stellar-axelar-gas-service"
version = "1.0.0"
edition = { workspace = true }
description = "AxelarGasService contract, responsible for managing gas payments and refunds for cross-chain communication on the Axelar network."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
library = [] # Only export the contract interface
testutils = []
