[package]
name = "stellar-axelar-operators"
version = "0.2.2"
edition = { workspace = true }
description = "Contract related to Stellar Axelar Operators."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = [] # Only export the contract interface
testutils = ["stellar-axelar-std/testutils"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
