[package]
name = "stellar-interchain-token-service"
version = "0.3.0"
edition = { workspace = true }
description = "Contract related to Stellar Interchain Token Service."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
cfg-if = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-token-sdk = { workspace = true }
stellar-axelar-gas-service = { workspace = true, features = ["library"] }
stellar-axelar-gateway = { workspace = true, features = ["library"] }
stellar-axelar-std = { workspace = true }
stellar-interchain-token = { workspace = true, features = ["library"] }
stellar-token-manager = { workspace = true, features = ["library"] }

[dev-dependencies]
goldie = { workspace = true }
hex = { workspace = true }
paste = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
stellar-axelar-gas-service = { workspace = true, features = ["testutils"] }
stellar-axelar-gateway = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }
stellar-interchain-token = { workspace = true, features = ["testutils"] }

[features]
library = []
testutils = ["stellar-axelar-std/testutils"]

[lints]
workspace = true
