[package]
name = "stellar-token-manager"
version = "0.1.0"
edition = { workspace = true }
description = "Token Manager contract, which is used to manage tokens via the Stellar Interchain Token Service."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
goldie = { workspace = true }
paste = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-axelar-std = { workspace = true, features = ["testutils"] }

[features]
library = [] # Only export the contract interface

[lints]
workspace = true
