[package]
name = "stellar-upgrader"
version = "0.2.4"
edition = { workspace = true }
description = "Upgrader contract, responsible for upgrading contracts and migrate data in an atomic transaction."
license = { workspace = true }
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
stellar-axelar-std = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
library = [] # Only export the contract interface
testutils = ["soroban-sdk/testutils", "stellar-axelar-std/testutils"]

[lints]
workspace = true
